--- a/docroot/themes/custom/twelve_carnation/src/scss/modules/_header.scss
+++ b/docroot/themes/custom/twelve_carnation/src/scss/modules/_header.scss
@@ -44,12 +44,12 @@
   }
 
   .layout-container .top-navs {
-    background-color: rgba($primary, .8);
+    background-color: $dark-blue;
     transition: background-color 0.5s ease;
 
     &.affix {
       /*updated*/
-      background-color: rgba($primary, .8);
+      background-color: $dark-blue;
     }
 
     &.affix.menu-in,
